<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accessibility_permission_required">This app requires permission to perform the \'%s\' action. To grant it, please enable this app in Accessibility settings. You can revoke this permission at any time in Settings.</string>
    <string name="accessibility_service">Accessibility service</string>
    <string name="account">Account</string>
    <string name="active_noti_alert">Dynamic notification effect</string>
    <string name="active_noti_alert_summary">Draws attention with a dynamic animation when a tile receives a notification.</string>
    <string name="adaptive_icon">Adaptive icon</string>
    <string name="adaptive_tile_style">Adaptive tile styles</string>
    <string name="adaptive_tile_style_summary">Darkens the tile colors when using a dark theme.</string>
    <string name="add">Add</string>
    <string name="add_new_tag">[Add new category]</string>
    <string name="add_shortcut">Add this shortcut</string>
    <string name="add_shortcut_error">Some shortcuts may only work correctly when this app is set as the default launcher.</string>
    <string name="addon">Add-on</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_animations">Advanced animations</string>
    <string name="advanced_animations_summary">Activates more fancy live tile animations.</string>
    <string name="align_center">Center</string>
    <string name="align_left">Left</string>
    <string name="align_right">Right</string>
    <string name="all">All</string>
    <string name="all_day">All day</string>
    <string name="all_day_event">Include all-day events</string>
    <string name="all_rise_up">All rise up</string>
    <string name="already_exists">The same name already exists.</string>
    <string name="alternative_name">Show family name first</string>
    <string name="alternative_name_summary">This is mainly for Western-style names where the family name is not listed first.</string>
    <string name="always_visible">Always visible</string>
    <string name="analog_clock">Analog clock</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animated_icons">Animated icons</string>
    <string name="animation_off">No animation</string>
    <string name="app_drawer">App drawer</string>
    <string name="app_folder">Folder</string>
    <string name="app_info">App info</string>
    <string name="app_launch_animation">App launch animation</string>
    <string name="app_name">Square Home</string>
    <string name="app_name_en">Square Home</string>
    <string name="app_search">App search</string>
    <string name="app_wallpaper">App wallpaper</string>
    <string name="app_widget">Android widget</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application">Application</string>
    <string name="applications">Applications</string>
    <string name="apply_iconpack">Do you want to apply this icon pack?</string>
    <string name="apps_to_show_noti">Live apps</string>
    <string name="apps_to_show_noti_summary">Select which apps can show notifications on their tiles.</string>
    <string name="ask_icon_pack">The icon pack is missing, would you like to download it?</string>
    <string name="auto_delete">Automatically delete checked items</string>
    <string name="auto_rotate">Auto-rotate</string>
    <string name="auto_rotate_keep">Keep</string>
    <string name="auto_rotate_off">Off</string>
    <string name="auto_rotate_on">On</string>
    <string name="background">Background</string>
    <string name="background_color">Background color</string>
    <string name="background_color_summary">Select a background color, used when the wallpaper is disabled or with the \'Transparent\' tile effect.</string>
    <string name="background_effect">Background effect</string>
    <string name="backup_center">Backup center</string>
    <string name="backup_center_changes">Due to Google\'s new storage policy, the backup folder location has changed. Backups will now be deleted when the launcher is uninstalled.\nTo preserve your data, please export backups manually.</string>
    <string name="backup_center_notice">All backups will be deleted when the app is uninstalled. Please export them beforehand for safekeeping.</string>
    <string name="banner">Wide (2:1) banner</string>
    <string name="banner_auto">Auto</string>
    <string name="banner_off">Off</string>
    <string name="banner_on">On</string>
    <string name="battery">Battery</string>
    <string name="battery_circle">Battery circle</string>
    <string name="behavior_n_ui">Behavior and UI</string>
    <string name="blank">Blank</string>
    <string name="blog">Official blog</string>
    <string name="blur">Blur</string>
    <string name="blurred">Blurred</string>
    <string name="blurred_inverse">Blurred (Inverse)</string>
    <string name="bold">Bold</string>
    <string name="both">Both</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="built_in_tags">Built-in categories</string>
    <string name="buy_product">Unlock premium features by purchasing a product.</string>
    <string name="by_name">Name</string>
    <string name="calendar">Calendar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="can_lock_now">You can now lock the screen.</string>
    <string name="cancel_yearly_first">To purchase this item, please first cancel your \'Yearly\' subscription in the Google Play store.</string>
    <string name="cannot_add_shortcut">You cannot add a shortcut while edit mode is locked.</string>
    <string name="cannot_copy_tile">This tile cannot be copied.</string>
    <string name="cannot_remove_page">You must have at least one page.</string>
    <string name="capitalize_all">Capitalize all</string>
    <string name="categorize_items">Group items</string>
    <string name="categorize_items_summary">Groups apps by their status, type, or initial letter.</string>
    <string name="center">Center</string>
    <string name="change_daily_wallpaper">Change wallpaper</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checklist">Checklist</string>
    <string name="clear">Clear</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clearing_files">Deleting existing files…</string>
    <string name="clock">Clock</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="color">Color</string>
    <string name="color_on_focus">Color on focus</string>
    <string name="color_set">Color palette</string>
    <string name="color_set_amber">Amber</string>
    <string name="color_set_blue">Blue</string>
    <string name="color_set_brown">Brown</string>
    <string name="color_set_dark">Dark</string>
    <string name="color_set_green">Green</string>
    <string name="color_set_grey">Grey</string>
    <string name="color_set_indigo">Indigo</string>
    <string name="cpu">CPU</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="disable_thumbnail_ani">Disable icon switching</string>
    <string name="disabled">No effect</string>
    <string name="down">Down</string>
    <string name="drag_to_resize">Drag this button to resize.</string>
    <string name="edit">Edit</string>
    <string name="hollow">Transparent</string>
    <string name="home_n_lock">Home &amp; Lock screens</string>
    <string name="home_screen">Home screen</string>
    <string name="import_folder">Import</string>
    <string name="launch_lock">Launch lock</string>
    <string name="layout_2_by_2">2x2 layout</string>
    <string name="lock_screen">Lock screen</string>
    <string name="menu_buttons">Menu buttons</string>
    <string name="move">Move</string>
    <string name="no_marquee_full_image">No marquee animation for full image</string>
    <string name="open_on_new_window">Always open in a new pop-up</string>
    <string name="options">Options</string>
    <string name="ram">RAM</string>
    <string name="refraction">Refraction</string>
    <string name="remove">Remove</string>
    <string name="resize">Resize</string>
    <string name="rounded">Rounded</string>
    <string name="sdcard">SD card</string>
    <string name="select">Select</string>
    <string name="show_battery_percent">Show battery percentage</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_file_size">File size</string>
    <string name="sort_by_filename">Filename</string>
    <string name="sort_by_recently_added">Date added</string>
    <string name="stay_on_full_image">Show \'Full image\' only</string>
    <string name="storage">Storage</string>
    <string name="up">Up</string>
</resources>