<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkCpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/cpu"/>
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkRam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/ram"/>
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/storage"/>
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkSdcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/sdcard"/>
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/battery"/>
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/checkShowBatteryPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_battery_percent"/>
    </LinearLayout>
</ScrollView>
