<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkDisableThumbnailAni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/disable_thumbnail_ani"/>
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkOldForm"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/layout_2_by_2"/>
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkOpenOnNewWindow"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/open_on_new_window"/>
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkStayOnFullImage"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/stay_on_full_image"/>
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkNoMarqueeFullImage"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/no_marquee_full_image"/>
    <CheckBox
        android:textSize="18sp"
        android:id="@+id/checkLaunchLock"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_dlg_item_height"
        android:text="@string/launch_lock"/>
</LinearLayout>
