<?xml version="1.0" encoding="utf-8"?>
<com.example.square.view.MenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/menu_buttons">
    <RelativeLayout
        android:id="@+id/layoutButtons"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageButton
                android:id="@+id/btnSelect"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/menu_button_padding"
                android:layout_width="@dimen/menu_button_size"
                android:layout_height="@dimen/menu_button_size"
                android:src="@drawable/ic_btn_multi_select_1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/select"/>
            <ImageButton
                android:id="@+id/btnMove"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/menu_button_padding"
                android:layout_width="@dimen/menu_button_size"
                android:layout_height="@dimen/menu_button_size"
                android:src="@drawable/ic_btn_move_1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/move"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/btnInfo"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_info_1"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_info"/>
        <ImageButton
            android:id="@+id/btnRemove"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_remove_3"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/remove"/>
        <ImageButton
            android:id="@+id/btnOptions"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_settings_1"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/options"/>
        <ImageButton
            android:id="@+id/btnResize"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_resize_1"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/resize"/>
    </RelativeLayout>
    <TextView
        android:textSize="7.5sp"
        android:textColor="#00000000"
        android:id="@+id/anchor"
        android:padding="2.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22.5dp"
        android:text="@string/drag_to_resize"
        android:layout_alignRight="@+id/layoutButtons"
        android:layout_alignBottom="@+id/layoutButtons"/>
    <TextView
        android:textSize="15sp"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center"
        android:id="@+id/textHint"
        android:background="@drawable/bg_hint"
        android:padding="5dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_button_size"
        android:text="@string/drag_to_resize"
        android:layout_alignLeft="@+id/anchor"
        android:layout_alignBottom="@+id/layoutButtons"/>
</com.example.square.view.MenuLayout>
