<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/btnHome"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_screen"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/btnLock"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lock_screen"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/btnBoth"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_n_lock"/>
</LinearLayout>
