<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:background="@drawable/l_kit_bg_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/list"
        app:layout_constraintEnd_toEndOf="@+id/list"
        app:layout_constraintStart_toStartOf="@+id/list"
        app:layout_constraintTop_toTopOf="@+id/list"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/layoutButtons"
        app:layout_constraintEnd_toStartOf="@+id/layoutButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnInsert"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="true"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnEdit"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textAllCaps="true"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnDelete"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAllCaps="true"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnDeleteAll"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            android:textAllCaps="true"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnUp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:textAllCaps="true"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/btnDown"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:textAllCaps="true"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
