<?xml version="1.0" encoding="utf-8"?>
<com.example.square.view.MenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/menu_buttons">
    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp">
        <ImageButton
            android:id="@+id/btnInfo"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_info_1"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_info"/>
        <ImageButton
            android:id="@+id/btnRemove"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_remove_3"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/remove"/>
        <ImageButton
            android:id="@+id/btnOptions"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_settings_1"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/options"/>
        <ImageButton
            android:id="@+id/btnHideShow"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/menu_button_padding"
            android:layout_width="@dimen/menu_button_size"
            android:layout_height="@dimen/menu_button_size"
            android:src="@drawable/ic_btn_minus_1"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</com.example.square.view.MenuLayout>
