<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_wizard_content_bg"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/imageContentBg"
        android:layout_alignTop="@+id/imageContentBg"
        android:layout_alignRight="@+id/imageContentBg"
        android:layout_alignBottom="@+id/imageContentBg">
        <com.example.square.view.RoundedFrameLayout
            android:id="@+id/layoutPreview"
            android:background="@drawable/wp_sample"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/checkRounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/imageMask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.example.square.TileBgEffectSampleView
                android:layout_gravity="bottom|right"
                android:id="@+id/imagePreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginRight="-40dp"
                android:layout_marginBottom="-40dp"/>
            <ImageView
                android:layout_gravity="bottom|right"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="-10dp"
                android:layout_marginBottom="-10dp"
                android:src="@mipmap/ic_launcher"/>
        </com.example.square.view.RoundedFrameLayout>
        <CheckBox
            android:id="@+id/checkRounded"
            android:paddingTop="@dimen/dp24"
            android:paddingBottom="@dimen/dp24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounded"
            android:layout_marginStart="@dimen/dp24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="parent"/>
        <RadioGroup
            android:orientation="vertical"
            android:id="@+id/radioGroup"
            android:padding="@dimen/dp24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkRounded">
            <TextView
                android:textColor="?android:attr/colorAccent"
                android:id="@+id/textEffect"
                android:background="#00000000"
                android:paddingBottom="@dimen/dp12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_effect"
                style="?android:attr/listSeparatorTextViewStyle"/>
            <RadioButton
                android:id="@+id/radioButton0"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/disabled"/>
            <RadioButton
                android:id="@+id/radioButton1"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/blurred"/>
            <RadioButton
                android:id="@+id/radioButton2"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/hollow"/>
            <RadioButton
                android:id="@+id/radioButton3"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/refraction"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
